logs/flutter_daemon.txt
!! PLEASE REVIEW THIS LOG FOR SENSITIVE INFORMATION BEFORE SHARING !!

Dart Code extension: 3.70.0
Flutter extension: 3.70.0 (not activated)

App: Visual Studio Code
Version: 1.80.2
Platform: win

HTTP_PROXY: undefined
NO_PROXY: undefined

Logging Categories:
    FlutterDaemon

Fri Aug 04 2023 [08:39:18 GMT+0700 (Indochina Time)] Log file started
[8:39:18 AM] [FlutterDaemon] [Info] Spawning C:\src\flutter\bin\flutter.bat with args ["daemon"]
[8:39:18 AM] [FlutterDaemon] [Info] ..  in C:\src\flutter
[8:39:18 AM] [FlutterDaemon] [Info] ..  with {"toolEnv":{"FLUTTER_HOST":"VSCode","PUB_ENVIRONMENT":"vscode.dart-code"}}
[8:39:18 AM] [FlutterDaemon] [Info]     PID: 17120
[8:39:20 AM] [FlutterDaemon] [Info] <== [{"event":"daemon.connected","params":{"version":"0.6.1","pid":4356}}]
[8:39:20 AM] [FlutterDaemon] [Info] ==> [{"id":"1","method":"device.enable"}]
[8:39:20 AM] [FlutterDaemon] [Info] <== [{"event":"daemon.logMessage","params":{"level":"status","message":"Starting device daemon..."}}]
[8:39:20 AM] [FlutterDaemon] [Info] ==> [{"id":"2","method":"emulator.getEmulators"}]
[8:39:20 AM] [FlutterDaemon] [Info] <== [{"id":"1"}]
[8:39:23 AM] [FlutterDaemon] [Info] <== [{"id":"2","result":[{"id":"Pixel_3a_API_34_extension_level_7_x86_64","name":"Pixel_3a_API_34_extension_level_7_x86_64","category":"mobile","platformType":"android"},{"id":"Pixel_6_Pro_API_33","name":"Pixel 6 Pro API 33","category":"mobile","platformType":"android"}]}]
[8:39:26 AM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"windows","name":"Windows","platform":"windows-x64","emulator":false,"category":"desktop","platformType":"windows","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Windows [Version 10.0.22621.2070]","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[8:39:26 AM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"chrome","name":"Chrome","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Google Chrome 115.0.5790.170","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[8:39:26 AM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"edge","name":"Edge","platform":"web-javascript","emulator":false,"category":"web","platformType":"web","ephemeral":false,"emulatorId":null,"sdk":"Microsoft Edge 115.0.1901.188","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":false,"fastStart":false,"flutterExit":false,"hardwareRendering":true,"startPaused":true}}}]
[8:39:26 AM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"emulator-5554","name":"sdk gphone64 x86 64","platform":"android-x64","emulator":true,"category":"mobile","platformType":"android","ephemeral":true,"emulatorId":"Pixel_3a_API_34_extension_level_7_x86_64","sdk":"Android 14 (API 34)","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":true,"fastStart":true,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[8:39:26 AM] [FlutterDaemon] [Info] ==> [{"id":"3","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[8:39:26 AM] [FlutterDaemon] [Info] <== [{"id":"3","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[8:42:17 AM] [FlutterDaemon] [Info] ==> [{"id":"4","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[8:42:17 AM] [FlutterDaemon] [Info] <== [{"id":"4","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[8:42:17 AM] [FlutterDaemon] [Info] ==> [{"id":"5","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[8:42:17 AM] [FlutterDaemon] [Info] <== [{"id":"5","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[8:49:14 AM] [FlutterDaemon] [Info] ==> [{"id":"6","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[8:49:14 AM] [FlutterDaemon] [Info] <== [{"id":"6","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[8:49:14 AM] [FlutterDaemon] [Info] ==> [{"id":"7","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[8:49:14 AM] [FlutterDaemon] [Info] <== [{"id":"7","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[8:51:04 AM] [FlutterDaemon] [Info] ==> [{"id":"8","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[8:51:04 AM] [FlutterDaemon] [Info] <== [{"id":"8","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[8:51:04 AM] [FlutterDaemon] [Info] ==> [{"id":"9","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[8:51:04 AM] [FlutterDaemon] [Info] <== [{"id":"9","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[9:18:08 AM] [FlutterDaemon] [Info] ==> [{"id":"10","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:18:08 AM] [FlutterDaemon] [Info] <== [{"id":"10","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[9:18:08 AM] [FlutterDaemon] [Info] ==> [{"id":"11","method":"emulator.getEmulators"}]
[9:18:08 AM] [FlutterDaemon] [Info] <== [{"id":"11","result":[{"id":"Pixel_3a_API_34_extension_level_7_x86_64","name":"Pixel_3a_API_34_extension_level_7_x86_64","category":"mobile","platformType":"android"},{"id":"Pixel_6_Pro_API_33","name":"Pixel 6 Pro API 33","category":"mobile","platformType":"android"}]}]
[9:18:10 AM] [FlutterDaemon] [Info] ==> [{"id":"12","method":"emulator.launch","params":{"emulatorId":"Pixel_6_Pro_API_33","coldBoot":true}}]
[9:18:13 AM] [FlutterDaemon] [Info] <== [{"id":"12"}]
[9:18:21 AM] [FlutterDaemon] [Info] <== [{"event":"daemon.logMessage","params":{"level":"error","message":"Error 1 retrieving device properties for sdk gphone64 x86 64:"}}]
[9:18:21 AM] [FlutterDaemon] [Info] <== [{"event":"daemon.logMessage","params":{"level":"error","message":"adb.exe: device 'emulator-5554' not found\r\n"}}]
[9:18:21 AM] [FlutterDaemon] [Info] <== [{"event":"device.removed","params":{"id":"emulator-5554","name":"sdk gphone64 x86 64","platform":"android-arm","emulator":false,"category":"mobile","platformType":"android","ephemeral":true,"emulatorId":null,"sdk":"Android null (API null)","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":true,"fastStart":true,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[9:18:33 AM] [FlutterDaemon] [Info] <== [{"event":"device.added","params":{"id":"emulator-5556","name":"sdk gphone x86 64","platform":"android-x64","emulator":true,"category":"mobile","platformType":"android","ephemeral":true,"emulatorId":"Pixel_6_Pro_API_33","sdk":"Android 13 (API 33)","capabilities":{"hotReload":true,"hotRestart":true,"screenshot":true,"fastStart":true,"flutterExit":true,"hardwareRendering":true,"startPaused":true}}}]
[9:18:33 AM] [FlutterDaemon] [Info] ==> [{"id":"13","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:18:33 AM] [FlutterDaemon] [Info] <== [{"id":"13","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[9:19:09 AM] [FlutterDaemon] [Info] ==> [{"id":"14","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:19:09 AM] [FlutterDaemon] [Info] <== [{"id":"14","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[9:19:09 AM] [FlutterDaemon] [Info] ==> [{"id":"15","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[9:19:09 AM] [FlutterDaemon] [Info] <== [{"id":"15","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:40:10 PM] [FlutterDaemon] [Info] ==> [{"id":"16","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[12:40:11 PM] [FlutterDaemon] [Info] <== [{"id":"16","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[12:40:11 PM] [FlutterDaemon] [Info] ==> [{"id":"17","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[12:40:11 PM] [FlutterDaemon] [Info] <== [{"id":"17","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[1:45:15 PM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] lib/page/login.dart:61:20: Error: Can't find ')' to match '('.
            Padding(
                   ^
[3:12:21 PM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] Could not update files on device: PathNotFoundException: Cannot open file, path = 'D:\Flutter\buoi1\assets\images\2.png' (OS Error: The system cannot find the file specified.
, errno = 2)
[3:14:22 PM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] Could not update files on device: PathNotFoundException: Cannot open file, path = 'D:\Flutter\buoi1\assets\images\2.png' (OS Error: The system cannot find the file specified.
, errno = 2)
[3:14:28 PM] [FlutterRun] [Error] [Dart  (Pixel 6 Pro API 33)] Could not update files on device: PathNotFoundException: Cannot open file, path = 'D:\Flutter\buoi1\assets\images\2.png' (OS Error: The system cannot find the file specified.
, errno = 2)
[3:14:37 PM] [FlutterDaemon] [Info] ==> [{"id":"18","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[3:14:37 PM] [FlutterDaemon] [Info] <== [{"id":"18","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
[3:14:37 PM] [FlutterDaemon] [Info] ==> [{"id":"19","method":"daemon.getSupportedPlatforms","params":{"projectRoot":"D:\\Flutter\\buoi1"}}]
[3:14:37 PM] [FlutterDaemon] [Info] <== [{"id":"19","result":{"platforms":["linux","macos","windows","ios","android","web"]}}]
